test/errors/003_x.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-

z(s) : s

# xs free:
f: z(xs)
